# fleet-router

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/fleet_router/: __init__.py  angles.py  api.py  cli.py  providers.py
src/fleet_router.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_fleet_router.py
