[project]
license = "MIT"
name = "fleet-router"
version = "0.1.0"
description = "Route AI queries to the cheapest model that won't break."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.scripts]
fleet-router = "fleet_router.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
